test/valid/FieldIdEqPrimitiveObject/FieldIdEqPrimitiveObject.plume
/**
 * @author Diogo Marques, 30100
 */
class FieldIdEqPrimitiveObject extends Object is
	field Object : String
	
	method override toString : () -> String is
		Object
